--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 *.class
 *.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+target/
+project/
+
+*.iml
+*.ipr
+*.iws
+.idea
+out
+
+.bsp
